Fleshing out report text

--- a/Report/01-Introduction.ipynb
+++ b/Report/01-Introduction.ipynb
@@ -14,7 +14,7 @@
     "* Learn the performance of the models\n",
     "* Use the results of the models to evaluate the question\n",
     "\n",
-    "We first chose the data that we would work with, as finding a suitable dataset was going to be the main problem. For this we will use a CVE database, which is a collection of all reported common vulnerability and exploits with a short description about what each is about. We will look into how the nature of the CVEs have changed over time by analysing the descriptions. The Models we will using an LDA model but under different training conditions. As these are unsupervised, it is hard to analyse their performance, however we can look at how they have grouped the terms and evaluate them. We will also compare the models to see how their results differ. \n",
+    "We first chose the data that we would work with, as finding a suitable dataset was going to be the main problem. For this we will use a Common Vulnerabilities and Exploits (CVE) database. One of the fields of CVE databases is a description of each CVE entry. We will look into how the nature of the CVEs have changed over time by using topic modelling on the entry descriptions. The Models we will using an LDA model but under different training conditions. As these are unsupervised, it is hard to analyse their performance, however we can look at how they have grouped the terms and evaluate them. To finish we will directly compare the models to see how their results differ. \n",
     "\n",
     "## Library requirements\n"
    ]
@@ -404,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
