--- a/Report/02-Pre-Processing.ipynb
+++ b/Report/02-Pre-Processing.ipynb
@@ -365,34 +365,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48287918",
-   "metadata": {},
-   "source": [
-    "Remove Numbers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "cb94e799",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from string import digits\n",
-    "desc1 = ['']\n",
-    "remove_digits = str.maketrans(\"\",\"\",digits)\n",
-    "for line in desc:\n",
-    "     desc1.append(line.translate(remove_digits))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "adafcc7d",
    "metadata": {},
    "source": [
-    "Remove stop words, punctuation and lemmitize"
+    "We begin the preprocessing by writing a couple of functions for removing stopwords, punctuation and numbers."
    ]
   },
   {
@@ -424,6 +400,14 @@
     "    text1 = text.translate(table)\n",
     "\n",
     "    return text1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1960d5f9",
+   "metadata": {},
+   "source": [
+    "Let's apply these functions to a test string and observe the effect."
    ]
   },
   {
@@ -473,8 +457,7 @@
    "id": "ff061b85",
    "metadata": {},
    "source": [
-    "We see here the correct order to apply our functions is removal of stopwords and then cleaning. This is because words like `\"you'll\"` are in our stopword list but `\"youll\"` is not, and thus removing punctuation in the cleaning step messes us up if we do it before removing the stopwords. \n",
-    "We may now apply our functions to `desc` to clean it up."
+    "We see here the correct order to apply our functions is removal of stopwords and then cleaning. This is because words like `\"you'll\"` are in our stopword list but `\"youll\"` is not, and thus removing punctuation in the cleaning step results in erroneous output. Now we apply the functions to `desc` to clean it up."
    ]
   },
   {
@@ -513,7 +496,7 @@
    "id": "d63655bc",
    "metadata": {},
    "source": [
-    "I found out after doing the above that `gensim` has a list of stopwords which is much more comprehensive than the list in `nltk`. The code below is therefore almost a complete repeat of our `remove_stop_words` function. We will use both functions to ensure that we cover the largest range of stop words."
+    "Irritatingly, we found out after doing the above that `gensim` has a list of stopwords which is much more comprehensive than the list in `nltk`. The code below is therefore almost a complete repeat of our `remove_stop_words` function. We will use both functions to ensure that we cover the largest range of stop words."
    ]
   },
   {
@@ -529,14 +512,6 @@
     "    words = text.split(' ')\n",
     "    text1 = \" \".join([i for i in words if i not in all_stop_words])\n",
     "    return text1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "456f5f8a",
-   "metadata": {},
-   "source": [
-    "We can therefore generate produce a sparser representation (I call it `desc2`) of our descriptions than `desc1` if we want to. We see that it gets rid of words like `\"via\"`."
    ]
   },
   {
@@ -566,7 +541,7 @@
    "id": "6fd16c28",
    "metadata": {},
    "source": [
-    "Let's start the lemmatising."
+    "Now we can start the lemmatising."
    ]
   },
   {
@@ -588,6 +563,14 @@
     "    tokens = word_tokenize(line)\n",
     "    lemma_function = WordNetLemmatizer()\n",
     "    desc3.append([lemma_function.lemmatize(token, tag_map[tag[0]]) for token, tag in pos_tag(tokens)]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d523dd43",
+   "metadata": {},
+   "source": [
+    "To finish off we save our preprocessed data."
    ]
   },
   {
