Will sort this out

--- a/Bill_Evidence/billideas.ipynb
+++ b/Bill_Evidence/billideas.ipynb
@@ -584,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perhaps we could even use somethig temporal to inform our topic choices. Frequent (topic worthy) words are investigated, and a density estimate over time is derived for each. Words with less uniform density estimates are considered 'seed' words, and could have their weight (which weight, how?) adjusted in the LDA. Also, it can be said quite confidently that words which have fairly uniform should not be only found in one topic which contains many seed words."
+    "Perhaps we could even use something temporal to inform our topic choices. Frequent (topic worthy) words are investigated, and a density estimate over time is derived for each. Words with less uniform density estimates are considered 'seed' words, and could have their weight (which weight, how?) adjusted in the LDA. Also, it can be said quite confidently that words which have fairly uniform should not be only found in one topic which contains many seed words."
    ]
   },
   {
