--- a/Report/05 - Conclusion.ipynb
+++ b/Report/05 - Conclusion.ipynb
@@ -48,6 +48,16 @@
     " - One thing that we could have done that would have sped up the sequence model and may have provided better results is by removing words that only occur a couple of times. By removing infrequent words, we would have greatly reduced the size of the dictionary and many of those words are web addresses or similar, which are not particularly useful at finding the larger trends. This also, could have greatly improved the results gained from the indpendent years LDA because having lots of words that only appear in one year would have made it much harder to merge the topics between years.\n",
     " - If there was more time, it would have been nice to have created a similarity score that balanced the similarity of the topics with the number of topics modelled. On top of this, we could have created a score that accounted for the probabilies of the words being associated with each topic. Both of these might have been able to provide improved results from our models."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15050ec5",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "Original Idea - https://www.researchgate.net/publication/330625565_Analyzing_Evolving_Trends_of_Vulnerabilities_in_National_Vulnerability_Database\n",
+    "Dynamic Topic Models - https://mimno.infosci.cornell.edu/info6150/readings/dynamic_topic_models.pdf"
+   ]
   }
  ],
  "metadata": {
