--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now get right into the heart of `gensim`s LDA model and alter the document word priors in accordance with the 'topic titles'"
+    "We now get right into the heart of `gensim`'s LDA model and alter the document word priors in accordance with the 'topic titles'"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
