--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -45,8 +45,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.2 - Baseline Topic Model\n",
-    "\n",
+    "#### 3.2 - Baseline Topic Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We begin by retrieving the pre-processed data."
    ]
   },
@@ -119,15 +124,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyLDAvis.disable_notebook()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,8 +153,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3 - High Time For Time\n",
-    "\n",
+    "#### 3.3 - High Time For Time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Unusually, each document in our corpus belongs to a year, and we hope to incorporate this information into our topic modelling. Consider the set of frequent (topic worthy) words. For each word we can find the relative frequency of the documents which include the term in a given year. For terms like 'vulnerability' we expect this relative frequency to be somewhat time homogeneous. And for terms like 'sql' we expect the relative frequency to be nonhomogeneous. Lastly, given a topic, we should expect that it shouldn't account for all instances of a homogeneous word, and also all instances of an inhomogeneous word. It's precisely this idea which fuels our hypotheses:\n",
     "\n",
     "**Hypothesis 1:** The less time homogeneous terms are more likely to be good 'topic titles'- that is, a human would suggest that such words should form the basis of some topic.\n",
@@ -294,7 +295,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.4 - Careful Gardening\n",
+    "#### 3.4 - Careful Gardening"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Even though the work in 3.3 was the opposite of a compelling success, we proceed unphased. There may be good methods for extracting 'topic titles' from a corpus, and the seeding idea therefore still warrants investigation."
    ]
   },
@@ -357,15 +364,6 @@
     "\n",
     "pyLDAvis.enable_notebook()\n",
     "pyLDAvis.gensim_models.prepare(lda_model, doc_word_matrix, vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyLDAvis.disable_notebook()"
    ]
   },
   {
