--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.1 - Introduction\n",
+    "#### 3.1 - Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Section 03 and 04 contain the meat of our project: the topic modelling. Adam and I were keen on using a CVE dataset as a corpus because each document has an associated timestamp. We wanted to incorporate the the time structure somehow, and our first thought was to construct topic models and then analyse how the content of the corpus (i.e the derived topics) varied over time. Upon exploration of this aim we were underwhelmed- the topics generated were too 'fuzzy' to draw any incisive conclusions. Additionally, we thought that topic modelling was not needed to answer 'how does the corpus content vary over time?'. Indeed, investigating the time series of human selected key words (types of attack for instance) would probably produce similar, or better results. I eventually realised that we could incorporate the time structure in a different way: we could try to use our time structure to produce better topic models."
    ]
   },
@@ -265,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now order our words by the attained p-value and see if our messing about with the time homogeneity yielded anything exciting."
+    "We now order our words by p-value and see if our messing about with the time homogeneity yielded anything exciting."
    ]
   },
   {
