--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -193,7 +193,7 @@
     "frequent_words = []\n",
     "for i in range(0, len(vocab)):\n",
     "    if vocab.dfs[i] > 5000:\n",
-    "        frequent_words.append(vocab.id2token[i])\n",
+    "        frequent_words.append(vocab[i])\n",
     "\n",
     "len(frequent_words)"
    ]
@@ -237,25 +237,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "desc = df['Description']\n",
     "word_by_year = dict()\n",
     "\n",
     "for word in frequent_words:\n",
     "    word_signal = []\n",
-    "    for i in range(0, len(desc)):\n",
-    "        if word in desc[i]:\n",
+    "    for i in range(0, len(CVE_Corpus)):\n",
+    "        if word in CVE_Corpus[i]:\n",
     "            word_signal.append(1)\n",
     "        else:\n",
     "            word_signal.append(0)\n",
     "\n",
-    "# Finish this off."
+    "    x = []\n",
+    "    for i in range(0, len(year_count)-1):\n",
+    "        x.append(sum(word_signal[year_count[i]:year_count[i+1]]))\n",
+    "    \n",
+    "    word_by_year[word] = x"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We note that each year has a different number of CVE entries, and the time homogeneity condition must respect this. Our null hypothesis is that our word is time homogenous: the document frequency of a word in a given year is proportional to the nummber of documents in that year. Stated another way the number of documents in each year gives us a categorical distribution, and the document frequency of a word gives us a distribution to test. This is a job for the chi-squared test statisitic."
+    "We note that each year has a different number of CVE entries, and the time homogeneity condition must respect this. Our null hypothesis is that our word is time homogenous: the document frequency of a word in a given year is proportional to the nummber of documents in that year. Stated another way the number of documents in each year gives us a categorical distribution, and the document frequency of a word gives us a distribution to test. This is a job for the chi-squared test statisitic. Lets first derive the categorical distribution using `year_count`"
    ]
   },
   {
@@ -264,14 +267,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Chi-squared stuff."
+    "cat_distribution = []\n",
+    "\n",
+    "for i in range(0, len(year_count)-1):\n",
+    "    cat_distribution.append((year_count[i+1] - year_count[i])/year_count[-1])\n",
+    "\n",
+    "print(cat_distribution)\n",
+    "len(cat_distribution)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now order our words by p-value and see if our messing about with the time homogeneity yielded anything exciting."
+    "Unfotunately, upon carrying this out I saw the every word had negligible p-value. See below for a snapshot of the code from this:"
    ]
   },
   {
@@ -280,21 +289,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Order and view words."
+    "from scipy.stats import chisquare\n",
+    "\n",
+    "chisquare(word_by_year['allow'], \n",
+    "        f_exp= [i * (sum(word_by_year['allow'])) for i in cat_distribution])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explain the result."
+    "Because the above process is totally indistinguishing, we instead consider the KL divergence between d the values of `word_by_year` considered as a distribution and `cat_distribution`. To quickly illustrate this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distribution = [i / (sum(word_by_year['allow'])) for i in word_by_year['allow']]\n",
+    "\n",
+    "plt.plot(cat_distribution)\n",
+    "plt.plot(distribution)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even if we throw away the time homogenous words, we have more words than topics. We therefore want to consider a way to group words into similar topics. We considered an algorithm which found the minimum Jaccard distance between all pairs of words and then groups this pair of words, and continue in the same manner until we reach the desired number of topics. We didn't end up writing code for this, but realised anyway that it suffered from a major flaw- words which could be in the same topic have extreme Jaccard distances, not necessarily small. To illustrate, 'buffer' and 'overflow' have a small Jaccard distance, but 'linux' and 'macos' (which could reasonably be in the same topic) have a large Jaccard distance. "
+    "We now calculate the KL divergence for each word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def KL_div(a,b):\n",
+    "    a = np.array(a, dtype=float)\n",
+    "    b = np.array(b, dtype=float)\n",
+    "    return sum(np.where(a != 0, a * np.log(a / b), 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KL_scores = dict()\n",
+    "for word in frequent_words:\n",
+    "    distribution = [year / (sum(word_by_year[word])) for year in word_by_year[word]]\n",
+    "\n",
+    "    KL_scores[word] = KL_div(distribution,cat_distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then order the words by KL score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KL_sorting = sorted(KL_scores, key=KL_scores.get, reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examining `KL_sorting` is quite bleak. It does not appear to me that the terms which would make good topic titles have found themselves further up the list, and also many terms which would make poor topic titles seem to be high up the list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even if we can find a good process for getting topic titles (this may or may not involve the time srtucture) we will probably end up with more topic titles than topics. We therefore want to consider a way to group titles into similar topics. We considered an algorithm which found the minimum Jaccard distance between all pairs of words and then groups this pair of words, and continue in the same manner until we reach the desired number of topics. We didn't end up writing code for this, but realised anyway that it suffered from a major flaw- words which could be in the same topic have extreme Jaccard distances, not necessarily small. To illustrate, 'buffer' and 'overflow' have a small Jaccard distance, but 'linux' and 'macos' (which could reasonably be in the same topic) have a large Jaccard distance. "
    ]
   },
   {
@@ -323,9 +402,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Read in the topic titles."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -365,9 +442,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyLDAvis\n",
-    "import pyLDAvis.gensim_models\n",
-    "\n",
     "pyLDAvis.enable_notebook()\n",
     "pyLDAvis.gensim_models.prepare(lda_model, doc_word_matrix, vocab)"
    ]
