--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -402,13 +402,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "topic_1 = ['buffer', 'overflow']\n",
+    "topic_2 = ['xss', 'crosssite']\n",
+    "topic_3 = ['sql', 'injection']\n",
+    "topic_4 = ['plugin']\n",
+    "topic_5 = ['cisco', 'ibm', 'oracle']     # Companies who found the vulnerability. "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now get right into the heart of `gensim`'s LDA model and alter the document word priors in accordance with the 'topic titles'"
+    "We now get right into the heart of `gensim`'s LDA model and alter the document word priors in accordance with the 'topic titles'. We go straight to the documentaition page and see the following:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](\"Screenshot 2022-02-16 at 18.09.59\")"
    ]
   },
   {
@@ -417,14 +430,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do this."
+    "doc_word_prior "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then run our LDA exactly as before, keeping the same number of topics to ensure comparability."
+    "We then run our LDA with the new prior, keeping the same number of topics to ensure comparability."
    ]
   },
   {
@@ -474,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we'd like to comment on the fact that we ran the baseline, and seeded, LDA multiple times and attained a similar result. Blast."
+    "Finally we'd like to comment on the fact that we ran the baseline, and seeded, LDA multiple times and attained a similar result."
    ]
   },
   {
