--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](\"Screenshot 2022-02-16 at 18.09.59\")"
+    "<img src='pic.png'></img>"
    ]
   },
   {
