--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -414,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now get right into the heart of `gensim`'s LDA model and alter the document word priors in accordance with the 'topic titles'. We go straight to the documentaition page and see the following:"
+    "We now get right into the heart of `gensim`'s LDA model and alter the document word priors in accordance with the 'topic titles'. We go straight to the documentaition page and see the following optional input to the LDA model:"
    ]
   },
   {
@@ -425,12 +425,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We note that we need a matrix who's number of rows is the number of topics and columns are the number of words. We also spot (last line of picture) that there is auto prior finding functionality, I didn't know this was an option, and am a bit disappointed that I've been saying 'seeding' so much when this looks like fairly standard procedure! We'll give the auto-seeding a go to see if it does a better job than our own crafted prior. But first we'll make the matrix for our own prior."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_word_prior "
+    "topic_word_prior "
    ]
   },
   {
@@ -446,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lda_model = LDA(corpus=doc_word_matrix, id2word=vocab, num_topics=50)"
+    "lda_model = LDA(corpus=doc_word_matrix, id2word=vocab, num_topics=50, eta=topic_word_prior)"
    ]
   },
   {
@@ -480,14 +487,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Success/Failure"
+    "Finally let's see if the auto-seeding does better. We not that it probably doesn't employ the time structure of the corpus given not all corpera have a meaningful time structure. If the auto-seeding does work it will be a slight confirmation that my idea wasn't total madness!"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Finally we'd like to comment on the fact that we ran the baseline, and seeded, LDA multiple times and attained a similar result."
+    "lda_model = LDA(corpus=doc_word_matrix, id2word=vocab, num_topics=50, eta='auto')\n",
+    "c_model = CoherenceModel(model=lda_model, corpus=doc_word_matrix, coherence='u_mass')\n",
+    "coherence = c_model.get_coherence()"
    ]
   },
   {
